--- a/InvoiceAssistant/UI/Reports/ProfitLoss/ProfitLossReport.xaml
+++ b/InvoiceAssistant/UI/Reports/ProfitLoss/ProfitLossReport.xaml
@@ -116,6 +116,12 @@
                             <ComboBoxItem>2018</ComboBoxItem>
                             <ComboBoxItem>2019</ComboBoxItem>
                             <ComboBoxItem>2020</ComboBoxItem>
+                            <ComboBoxItem>2021</ComboBoxItem>
+                            <ComboBoxItem>2022</ComboBoxItem>
+                            <ComboBoxItem>2023</ComboBoxItem>
+                            <ComboBoxItem>2024</ComboBoxItem>
+                            <ComboBoxItem>2025</ComboBoxItem>
+                            
                         </ComboBox>
                     </StackPanel>
 
